@@ -1,6 +1,10 @@
 #include <stdio.h>
 #include <sect_attribs.h>
 
+#ifdef _MSC_VER
+#pragma comment(linker, "/merge:.CRT=.rdata")
+#endif
+
 typedef void (__cdecl *_PVFV)(void);
 
 _CRTALLOC(".CRT$XIA") _PVFV __xi_a[] = { NULL };
