@@ -1,3 +1,13 @@
+2012-04-19  Kai Tietz  <ktietz@redhat.com>
+	    Timo Kreuzer <timo.kreuzer@reactos.org>
+
+	* crt/cinitexe.c: Allow compilation with msvc.
+	* crt/crt_handler.c: Likewise.
+	* crt/crtexe.c: Likewise.
+	* crt/gs_support.c: Likewise.
+	* crt/merr.c: Likewise.
+	* crt/pseudo-reloc.c: Likewise.
+
 2012-02-26  Jonathan Yong  <jon_y@users.sourceforge.net>
 
 	* lib32/msvcrt.def (_ftime_s): Add alias to _ftime32_s.
